--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "darshan-as-portfolio",
+  "name": "darshan-as-17-portfolio",
+  "homepage": "https://Darshanas17.github.io/darshan-as-17-portfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
