--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-github-btn": "^1.4.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-scroll": "^1.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
