--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.395.0",
     "preline": "^2.3.0",
     "react": "^18.2.0",
+    "react-doc-viewer": "^0.1.14",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "react-icons": "^5.0.1",
